--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,34 @@ body {
     background-color: #d9dcd6;
 }
 
+header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 48px;
+}
+
+nav {
+    list-style-type: none;
+    display: inline-block;
+    margin-left: 25px;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+/*
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -19,6 +47,7 @@ body {
     display: inline-block;
     font-size: 48px;
 }
+*/
 
 .header h1 .seo {
     color: #d9dcd6;
