--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,45 +15,16 @@ header {
     color: #ffffff;
 }
 
-h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-nav {
-    list-style-type: none;
-    display: inline-block;
-    margin-left: 25px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-/*
-.header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-}
-
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-*/
-
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -61,11 +32,11 @@ li {
     font-size: 20px;
 }
 
-.header div ul {
+nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -79,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-main {
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -98,7 +69,7 @@ main {
     margin-left: 25px;
 }
 
-#content {
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -163,7 +134,7 @@ main {
     max-width: 150px;
 }
 
-#search-engine-optimization {
+.search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -190,7 +161,7 @@ main {
     color: #ffffff;
 }
 
-#search-engine-optimization img {
+.search-engine-optimization img {
     max-height: 200px;
 }
 
